--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,15 @@ dependencies:
     sdk: flutter
   firebase_auth: ^4.16.0
   firebase_core: ^2.24.2
+  firebase_storage: ^11.6.0
   google_fonts: ^6.1.0
   google_sign_in: ^6.2.1
   cloud_firestore: ^4.14.0
   carousel_slider: ^4.2.1
+  file_picker: ^6.1.1
+  open_file: ^3.3.2
+  path_provider: ^2.1.2
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
